@@ -1,91 +1,75 @@
 package com.anandh.mes.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.anandh.mes.dto.EquipmentDTO;
 import com.anandh.mes.entity.Equipment;
+import com.anandh.mes.enums.EquipmentStatus;
+import com.anandh.mes.enums.EquipmentType;
 import com.anandh.mes.exception.ResourceNotFoundException;
 import com.anandh.mes.repository.EquipmentRepository;
 import com.anandh.mes.service.EquipmentService;
 
 import lombok.RequiredArgsConstructor;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class EquipmentServiceImpl implements EquipmentService {
 
     private final EquipmentRepository equipmentRepository;
 
-    private static final Logger logger =
-            LoggerFactory.getLogger(EquipmentServiceImpl.class);
-
     @Override
     public EquipmentDTO createEquipment(EquipmentDTO dto) {
 
-        logger.info("Creating Equipment : {}", dto.getEquipmentCode());
+        if (equipmentRepository.existsByEquipmentCode(dto.getEquipmentCode())) {
+            throw new RuntimeException("Equipment Code already exists");
+        }
 
-        Equipment equipment = Equipment.builder()
-                .equipmentCode(dto.getEquipmentCode())
-                .equipmentName(dto.getEquipmentName())
-                .equipmentType(dto.getEquipmentType())
-                .status(dto.getStatus())
-                .location(dto.getLocation())
-                .manufacturer(dto.getManufacturer())
-                .model(dto.getModel())
-                .build();
+        Equipment equipment = mapToEntity(dto);
 
-        Equipment saved = equipmentRepository.save(equipment);
+        Equipment savedEquipment = equipmentRepository.save(equipment);
 
-        logger.info("Equipment Created Successfully with ID : {}", saved.getEquipmentId());
-
-        return mapToDTO(saved);
+        return mapToDTO(savedEquipment);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<EquipmentDTO> getAllEquipment() {
-
-        logger.info("Fetching All Equipment");
 
         return equipmentRepository.findAll()
                 .stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public EquipmentDTO getEquipmentById(Long id) {
 
-        logger.info("Fetching Equipment with ID : {}", id);
-
         Equipment equipment = equipmentRepository.findById(id)
-                .orElseThrow(() -> {
-                    logger.error("Equipment not found with ID : {}", id);
-                    return new ResourceNotFoundException(
-                            "Equipment not found with id : " + id);
-                });
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Equipment not found with id : " + id));
 
         return mapToDTO(equipment);
-
     }
 
     @Override
-    public EquipmentDTO updateEquipment(Long id, EquipmentDTO dto) {
-
-        logger.info("Updating Equipment with ID : {}", id);
+    public EquipmentDTO updateEquipment(Long id,
+                                        EquipmentDTO dto) {
 
         Equipment equipment = equipmentRepository.findById(id)
-                .orElseThrow(() -> {
-                    logger.error("Equipment not found with ID : {}", id);
-                    return new ResourceNotFoundException(
-                            "Equipment not found with id : " + id);
-                });
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Equipment not found with id : " + id));
 
         equipment.setEquipmentCode(dto.getEquipmentCode());
         equipment.setEquipmentName(dto.getEquipmentName());
@@ -95,31 +79,88 @@ public class EquipmentServiceImpl implements EquipmentService {
         equipment.setManufacturer(dto.getManufacturer());
         equipment.setModel(dto.getModel());
 
-        Equipment updated = equipmentRepository.save(equipment);
+        Equipment updatedEquipment = equipmentRepository.save(equipment);
 
-        logger.info("Equipment Updated Successfully");
-
-        return mapToDTO(updated);
-
+        return mapToDTO(updatedEquipment);
     }
 
     @Override
     public void deleteEquipment(Long id) {
 
-        logger.info("Deleting Equipment with ID : {}", id);
-
         Equipment equipment = equipmentRepository.findById(id)
-                .orElseThrow(() -> {
-                    logger.error("Equipment not found with ID : {}", id);
-                    return new ResourceNotFoundException(
-                            "Equipment not found with id : " + id);
-                });
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Equipment not found with id : " + id));
 
         equipmentRepository.delete(equipment);
-
-        logger.info("Equipment Deleted Successfully");
-
     }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<EquipmentDTO> searchByName(String name) {
+
+        return equipmentRepository
+                .findByEquipmentNameContainingIgnoreCase(name)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<EquipmentDTO> getByStatus(EquipmentStatus status) {
+
+        return equipmentRepository
+                .findByStatus(status)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<EquipmentDTO> getByType(EquipmentType type) {
+
+        return equipmentRepository
+                .findByEquipmentType(type)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<EquipmentDTO> getByLocation(String location) {
+
+        return equipmentRepository
+                .findByLocationContainingIgnoreCase(location)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Page<EquipmentDTO> getEquipmentPage(
+            int page,
+            int size,
+            String sortBy) {
+
+        Pageable pageable = PageRequest.of(
+                page,
+                size,
+                Sort.by(sortBy));
+
+        return equipmentRepository
+                .findAll(pageable)
+                .map(this::mapToDTO);
+    }
+
+    /*
+     * ==========================
+     * Mapping Methods
+     * ==========================
+     */
 
     private EquipmentDTO mapToDTO(Equipment equipment) {
 
@@ -133,7 +174,18 @@ public class EquipmentServiceImpl implements EquipmentService {
                 .manufacturer(equipment.getManufacturer())
                 .model(equipment.getModel())
                 .build();
-
     }
 
+    private Equipment mapToEntity(EquipmentDTO dto) {
+
+        return Equipment.builder()
+                .equipmentCode(dto.getEquipmentCode())
+                .equipmentName(dto.getEquipmentName())
+                .equipmentType(dto.getEquipmentType())
+                .status(dto.getStatus())
+                .location(dto.getLocation())
+                .manufacturer(dto.getManufacturer())
+                .model(dto.getModel())
+                .build();
+    }
 }
